--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="mic_disabled_color">#FDFDFD</color>
-    <color name="mic_enabled_color">#736B75</color>
+    <color name="mic_disabled_color">#8BF5F5F5</color>
+    <color name="mic_enabled_color">#FFFFFF</color>
 </resources>
