added more  change in designs(v)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Skip"
-        app:backgroundTint="#A971CE"
+        app:backgroundTint="#CF9CF3"
         app:layout_constraintBottom_toBottomOf="@+id/welcomeImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.915"
