--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -8,7 +8,7 @@
         android:id="@+id/welcomeImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/welcomebg"
+        android:src="@drawable/bgspace"
         android:scaleType="centerCrop" />
 
     <TextView
