--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -2,13 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bgspace">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
         android:id="@+id/layout"
-        tools:ignore="MissingConstraints">
+        android:layout_width="411dp"
+        android:layout_height="374dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-2dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -18,16 +20,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/settingsbg" />
+            app:srcCompat="@drawable/bgspace" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="113dp"
             android:layout_height="40dp"
+            android:layout_margin="20dp"
             android:text="Profile"
             android:textColor="@color/white"
             android:textSize="30dp"
-            android:layout_margin="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.053"
@@ -47,7 +49,8 @@
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layout" />
+            app:layout_constraintTop_toBottomOf="@id/layout"
+            tools:ignore="NotSibling" />
 
         <TextView
             android:id="@+id/usernameTextView"
@@ -87,65 +90,37 @@
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="match_parent"
+                android:layout_width="390dp"
                 android:layout_height="wrap_content"
-                android:text="Languages"
+                android:text="Voices"
                 android:padding="30dp"
                 android:textAlignment="viewStart"
                 android:textColor="#000000"
                 app:backgroundTint="@color/white" />
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Routines"
-                android:textAlignment="viewStart"
-                android:padding="30dp"
-                android:textColor="#000000"
-                app:backgroundTint="@color/white" />
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Music"
-                android:textAlignment="viewStart"
-                android:padding="30dp"
-                android:textColor="#000000"
-                app:backgroundTint="@color/white" />
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Accessibility"
-                android:textAlignment="viewStart"
-                android:padding="30dp"
-                android:textColor="#000000"
-                app:backgroundTint="@color/white" />
             <Button
                 android:id="@+id/button5"
-                android:layout_width="match_parent"
+                android:layout_width="390dp"
                 android:layout_height="wrap_content"
-                android:text="Accounts"
+                android:text="Terms and conditions"
                 android:textAlignment="viewStart"
                 android:padding="30dp"
                 android:textColor="#000000"
                 app:backgroundTint="@color/white" />
             <Button
                 android:id="@+id/button6"
-                android:layout_width="match_parent"
+                android:layout_width="390dp"
                 android:layout_height="wrap_content"
-                android:text="General"
+                android:text="About Us"
                 android:textAlignment="viewStart"
                 android:padding="30dp"
                 android:textColor="#000000"
                 app:backgroundTint="@color/white" />
             <Button
                 android:id="@+id/button7"
-                android:layout_width="match_parent"
+                android:layout_width="390dp"
                 android:layout_height="wrap_content"
-                android:text="Help"
+                android:text="Sign Out"
                 android:textAlignment="viewStart"
                 android:padding="30dp"
                 android:textColor="#000000"
