--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -7,20 +7,21 @@
 
     <RelativeLayout
         android:id="@+id/layout"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="374dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="-2dp">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bgspace" />
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            -->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:srcCompat="@drawable/bgspace" />-->
 
         <TextView
             android:id="@+id/textView5"
@@ -33,17 +34,18 @@
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.053"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
+
             app:layout_constraintVertical_bias="0.528" />
 
         <ImageView
             android:id="@+id/profileImageView"
             android:layout_width="140dp"
             android:layout_height="140dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:layout_marginStart="129dp"
-            android:layout_marginTop="93dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="95dp"
             android:layout_marginEnd="105dp"
             android:layout_marginBottom="10dp"
             android:scaleType="fitCenter"
@@ -75,7 +77,7 @@
 
 
     <ScrollView
-        android:layout_width="414dp"
+        android:layout_width="match_parent"
         android:layout_height="558dp"
         app:layout_constraintTop_toBottomOf="@id/layout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,17 +92,17 @@
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="390dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Voices"
                 android:padding="30dp"
+                android:text="Voices"
                 android:textAlignment="viewStart"
                 android:textColor="#000000"
                 app:backgroundTint="@color/white" />
 
             <Button
                 android:id="@+id/button5"
-                android:layout_width="390dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Terms and conditions"
                 android:textAlignment="viewStart"
@@ -109,7 +111,7 @@
                 app:backgroundTint="@color/white" />
             <Button
                 android:id="@+id/button6"
-                android:layout_width="390dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="About Us"
                 android:textAlignment="viewStart"
@@ -118,7 +120,7 @@
                 app:backgroundTint="@color/white" />
             <Button
                 android:id="@+id/button7"
-                android:layout_width="390dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sign Out"
                 android:textAlignment="viewStart"
