--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -44,7 +44,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:layout_marginStart="100dp"
+            android:layout_marginStart="130dp"
             android:layout_marginTop="95dp"
             android:layout_marginEnd="105dp"
             android:layout_marginBottom="10dp"
@@ -61,9 +61,9 @@
             android:layout_below="@+id/profileImageView"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="50dp"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="52dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
             android:textColor="#ffffff"
@@ -75,10 +75,10 @@
 
     </RelativeLayout>
 
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="558dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
         app:layout_constraintTop_toBottomOf="@id/layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -94,37 +94,42 @@
                 android:id="@+id/button1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="30dp"
+                android:padding="20dp"
                 android:text="Voices"
                 android:textAlignment="viewStart"
                 android:textColor="#000000"
                 app:backgroundTint="@color/white" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/TandC"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Terms and conditions"
                 android:textAlignment="viewStart"
-                android:padding="30dp"
+                android:padding="20dp"
+                android:layout_marginTop="10dp"
                 android:textColor="#000000"
                 app:backgroundTint="@color/white" />
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/aboutus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="About Us"
                 android:textAlignment="viewStart"
-                android:padding="30dp"
+                android:padding="20dp"
+                android:layout_marginTop="10dp"
                 android:textColor="#000000"
                 app:backgroundTint="@color/white" />
+
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/signOutButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:layout_marginTop="20dp"
                 android:text="Sign Out"
-                android:textAlignment="viewStart"
-                android:padding="30dp"
+                android:textSize="20dp"
+                android:textStyle="bold"
                 android:textColor="#000000"
                 app:backgroundTint="@color/white" />
         </LinearLayout>
