--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -31,7 +31,6 @@
             android:text="Profile"
             android:textColor="@color/white"
             android:textSize="30dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.053"
 
@@ -39,14 +38,15 @@
 
         <ImageView
             android:id="@+id/profileImageView"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="114dp"
+            android:layout_height="105dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
             android:layout_gravity="center"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="95dp"
-            android:layout_marginEnd="105dp"
+            android:layout_marginStart="119dp"
+            android:layout_marginTop="92dp"
+            android:layout_marginEnd="111dp"
             android:layout_marginBottom="10dp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,58 +76,68 @@
     </RelativeLayout>
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="558dp"
-        app:layout_constraintTop_toBottomOf="@id/layout"
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
+        android:background="@drawable/settingsbuttonsbg"
+        android:padding="15dp"
+        android:text="Voices"
+
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.917"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
+        android:background="@drawable/settingsbuttonsbg"
+        android:padding="15dp"
+        android:text="Terms and conditions"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.917"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.622" />
 
-            <Button
-                android:id="@+id/button1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="30dp"
-                android:text="Voices"
-                android:textAlignment="viewStart"
-                android:textColor="#000000"
-                app:backgroundTint="@color/white" />
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
+        android:background="@drawable/settingsbuttonsbg"
 
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Terms and conditions"
-                android:textAlignment="viewStart"
-                android:padding="30dp"
-                android:textColor="#000000"
-                app:backgroundTint="@color/white" />
-            <Button
-                android:id="@+id/button6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="About Us"
-                android:textAlignment="viewStart"
-                android:padding="30dp"
-                android:textColor="#000000"
-                app:backgroundTint="@color/white" />
-            <Button
-                android:id="@+id/button7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Sign Out"
-                android:textAlignment="viewStart"
-                android:padding="30dp"
-                android:textColor="#000000"
-                app:backgroundTint="@color/white" />
-        </LinearLayout>
-    </ScrollView>
+        android:padding="15dp"
+        android:text="About Us"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.082"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
+        android:background="@drawable/settingsbuttonsbg"
+        android:padding="15dp"
+        android:text="Sign Out"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.082"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/layout"
+        app:layout_constraintVertical_bias="0.622" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
