--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -77,7 +77,7 @@
 
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/signOutButton"
         android:layout_width="150dp"
         android:layout_height="120dp"
         android:background="@drawable/settingsbuttonsbg"
@@ -94,7 +94,7 @@
         app:layout_constraintVertical_bias="0.85" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/TandC"
         android:layout_width="150dp"
         android:layout_height="120dp"
         android:background="@drawable/settingsbuttonsbg"
@@ -109,7 +109,7 @@
         app:layout_constraintVertical_bias="0.622" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/aboutus"
         android:layout_width="150dp"
         android:layout_height="120dp"
         android:background="@drawable/settingsbuttonsbg"
