--- a/app/src/main/res/layout/activity_terms_and_consitions.xml
+++ b/app/src/main/res/layout/activity_terms_and_consitions.xml
@@ -7,7 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="@color/black">
 
         <!-- Title for Terms and Conditions -->
         <TextView
@@ -16,12 +17,14 @@
             android:text="Terms and Conditions"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:layout_marginBottom="16dp"/>
 
         <!-- Content for Terms and Conditions -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="@string/terms_and_conditions_text"/>
     </LinearLayout>
 </ScrollView>
