--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,14 @@
     </style>
 
     <style name="Theme.Jaadu" parent="Base.Theme.Jaadu" />
+    <style name="Theme.Jaadu.Fullscreen" parent="Theme.Jaadu">
+        <item name="android:actionBarStyle">@color/black</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+<!--    <style name="ThemeOverlay.Jaadu.FullscreenContainer" parent="">-->
+<!--        <item name="android:imeFullscreenBackground">@color/light_blue_600</item>-->
+<!--        <item name="android:panelFullBackground">@color/light_blue_A200</item>-->
+<!--    </style>-->
 </resources>
